# decayObserver

./: .gitignore  LambdaB2LcHHH_branches.txt  LambdaB2LcHHH_branches_old.txt  README.md  dummy.txt  fitter_preselect.conf  from-vit  test.cpp
CMakeHome/: CMakeLists.txt
CMakeHome/configs/: bdtana_LambdaB2LcHHH.conf  bdtana_LambdaB2LcHHHvit.conf  fitter2-Lb.conf  fitter2-missPi.conf  fitter_preselect_DsVeto.conf  fitter_sigMC_preselect.conf  secateur_LambdaB2LcHHH_mini.conf  secateur_LambdaB2LcHHH_preselect-l.conf  secateur_LambdaB2LcHHH_preselect.conf  secateur_LambdaB2LcHHH_preselect_DsVeto.conf  secateur_LambdaB2LcHHH_preselect_comb-bkg.conf  secateur_Lb2LcHHH_sigMC_preselect.conf  secateur_Lb2LcHHH_sigMC_preselect_tr.conf
CMakeHome/configs/plots/: danieltest.conf  example.conf~
CMakeHome/danielproto/: .gitignore  CMakeLists.txt  RooFit_Gauss_Template.cpp  RooFit_Gauss_Template0.cpp
CMakeHome/danielproto/BDT/TMVA-v4.2.0/: .directory
CMakeHome/danielproto/Configs/: BDT_Background.conf  BDT_Signal.conf  Backgroundselection.conf  Data_res_preselection.conf  Datapruning.conf
CMakeHome/danielproto/Copytree/: copytree  copytree.cpp
CMakeHome/danielproto/Fitting/: CMakeLists.txt  FitBKGRafterBDT_common.cpp  FitBKGRafterBDT_punzi.cpp  FitResSignalafterBDT_punzi.cpp  fit.cpp  fitbkgr_insigregion.cpp  fitselection.cpp  fitsignal_resonant.cpp  fitsignal_resonant_CB.cpp
CMakeHome/danielproto/Fitting_wo_Fitter/: CMakeLists.txt  FitBKGRafterBDT_common.cpp  FitBKGRafterBDT_punzi.cpp  FitResSignalafterBDT_common.cpp  fitbkgr_insigregion.cpp  fitsignal_resonant.cpp
CMakeHome/danielproto/Fitting_wo_Fitter/2D-Fits/: 2D-Fit_Non-Resonant_selection_punzi.cpp  2D-Fit_Resonant_selection_punzi.cpp  CMakeLists.txt
CMakeHome/danielproto/Plotscript/: CMakeLists.txt  Plotvariable.cpp  Plotvariable.h  d_Plotscript.cpp  tree2hist.cpp
CMakeHome/danielproto/Scripts/: Makefile  test.cpp
CMakeHome/danielproto/Test/: .directory  Makefile  neu  neu.cpp
CMakeHome/kevindummy/: CMakeLists.txt  Sayer.cpp  Sayer.h  say.cpp
CMakeHome/kevinproto/: CMakeLists.txt  README  README.md  main.cpp
CMakeHome/kevinproto/BDT/: CMakeLists.txt  bdt.cpp
CMakeHome/kevinproto/parsing_config_files/: CMakeLists.txt  example.conf  main.cpp
CMakeHome/kevinproto/secateur/: CMakeLists.txt  ItemSelector.cpp  ItemSelector.h  ItemSelectorDict.cpp  ItemSelectorDict.h  LinkDef.h  SelectDialog.cpp  SelectDialog.h  SelectDialogDict.h  secateur.conf  secateur.cpp  secateur_example.conf  todo.txt
CMakeHome/main/: CMakeLists.txt  hello.cpp
CMakeHome/main/BDT/main/: Run_BDT  (+6 more)
CMakeHome/main/CUSTOM_CLASSES/: Value_w_Err.h  Value_w_Err_README.md
CMakeHome/main/Getlumi/: CMakeLists.txt  Getlumi.cpp  README.txt
CMakeHome/main/Plotscript/: CMakeLists.txt  EXAMPLE_SETTINGS.cpp  Plotscript.cpp  Plotvariable.cpp  Plotvariable.h  Plotvariable_2D.cpp  Plotvariable_2D.h  README.txt  WARNING.txt  daniel_settings.cpp  kevin_settings.cpp  plot_example.cpp  tree2hist.h  vitali_settings.cpp
CMakeHome/main/bdtana/: BdtAnalyser.cpp  BdtAnalyser.h  CMakeLists.txt  README.md  bdtana.cpp  bdtana_example.conf
CMakeHome/main/fitter/: ArgParser.h  CMakeLists.txt  Fitter.cpp  Fitter.h  FitterPdf.cpp  FitterPdf.h  Interval.h  fitter.rar  main.cpp  test.conf
CMakeHome/main/fitter2/: .directory  ArgParser.h  BranchProxy.h  CMakeLists.txt  Fitter.cpp  Fitter.h  Value_w_Err.h  fitter_example.conf  main.cpp
CMakeHome/main/plotconf/: ArgParser.h  CMakeLists.txt  CMakeLists.txt~  EXAMPLE_CONFIG.conf  Plotvariable.cpp  Plotvariable_2D.cpp  README.txt  plotconf.cpp  vitali_settings.cpp~
CMakeHome/main/secateur/: CMakeLists.txt  LinkDef.h  README.md  SelectDialogDict.cpp  SelectDialogDict_rdict.pcm  secateur.cpp  secateur_example.conf
CMakeHome/plots/: .gitignore
CMakeHome/src/: CMakeLists.txt
CMakeHome/test/: CMakeLists.txt
DaVinciScripts/: Lb2LcKKpi.py  Lb2LcKKpiMCdn.py  Lb2LcKKpiMCup.py  Lb2LcPPbarpi.py
(+140 files in other folders)
